--- a/public/stylesheets/scss/_index.scss
+++ b/public/stylesheets/scss/_index.scss
@@ -129,13 +129,24 @@ body.indexBody {
                         padding-left: 20px;
                     }
 
+                    .tag-text {
+                        display: inline-block;
+                        @media(min-width: $screen-sm) {
+                            display: block;
+                        }
+                    }
+
                     &:before {
                         font-family: "Material Icons";
                         content    : "\e876";
-                        position   : absolute;
-                        margin-left: -20px;
+                        vertical-align: middle;
+                        padding-right: 5px;
+                        margin-left: -15px;
                         @media(min-width: $screen-sm) {
-                            margin   : 0;
+                            vertical-align: baseline;
+                            position: absolute;
+                            padding: 0;
+                            margin: 0;
                             top      : 50%;
                             left     : 0;
                             transform: translateY(-50%);
@@ -174,6 +185,11 @@ body.indexBody {
                     padding-top: 3px;
                     color      : $error-color;
                     text-shadow: 0 0 10px rgba(255, 255, 255, 0.25);
+                    text-align: left;
+                    margin: 0 auto;
+                    @media(min-width: $screen-sm) {
+                        margin: 0;
+                    }
                 }
 
                  > input:not([type="submit"]),
